--- a/README
+++ b/README
@@ -1,9 +1,10 @@
 README - Net::SSLeay Perl module for using OpenSSL
 
-25.9.2001, Sampo Kellomaki <sampo@iki.fi>
-Version: 1.09
-$Id: README,v 1.4 2001/09/28 20:24:11 sampo Exp $
+25.3.2002, Sampo Kellomaki <sampo@symlabs.com>
+Version: 1.14
+$Id: README,v 1.5 2002/03/25 23:42:46 sampo Exp $
 
+1.14: added perr certificate return, HPUX aCC flags fix
 1.09: added many utlility functions of OpenSSL API, better old perl support
 1.08: 64 bit fixes, windows fixes, fixed extra newline with auth bug
 1.07: added rudimentary TLSv1 support by Stephen C. Koehler
@@ -20,11 +21,11 @@ By popular demand...
 Prerequisites
 -------------
 
-perl-5.6.0
+perl-5.6.1
                 though anything starting from perl5.002 probably works.
-OpenSSL-0.9.6b
-                (try http://www.openssl.org/) - nothing
-                earlier works. This release has been tested with 0.9.6b and
+OpenSSL-0.9.6c
+                (try http://www.openssl.org/) - 
+                This release has been tested with 0.9.6c and
 		in historical light it seems likely that future versions
 	  	will work as well (if major version number changes all bets
 		are off, though)
@@ -36,6 +37,15 @@ Note: SSLeay is no longer supported. If you want to use Net::SSLeay with
       in OpenSSL-0.9.2b. OpenSSL-0.9.1c support has also been dropped,
       version 1.03 was the last one to support that.
 
+You should use the same C compiler and options to compile OpenSSL,
+perl, and Net::SSLeay. This is the only supported configuration.
+If you insist on using different compilers (perhaps because you
+obtained either OpenSSL or perl as binaries from a vendor and they
+used a compiler that you do not have) then all requests for support
+will be ignored. If the only way for you to use the same compiler
+for all three components is to recompile your openssl or perl, then
+that is exactly what I expect you to do before asking for support.
+
 Installing
 ----------
 
@@ -43,11 +53,32 @@ Unix:
 	# build OpenSSL as per instructions in that package
 
 	gunzip <Net_SSLeay.pm-1.06.tar.gz | tar xvf -
-	cd Net_SSLeay.pm-1.06
+	cd Net_SSLeay.pm-1.14
 	./Makefile.PL -t     # builds and tests it
 	make install         # You probably have to su to root to do this
 	perldoc Net::SSLeay  # optional, but highly recommended
 	perldoc Net::SSLeay::Handle
+
+HPUX:
+	In principle the Unix build should work (Makefile.PL contains
+	special code to detect aCC), but historically there have been
+	some problems. Marko Asplund (aspa@@kronodoc._fi) reports
+	that he has successfully compiled on HP-UX. He used following
+	incantations
+
+	Configuring OpenSSL:
+
+		./Configure no-asm --prefix=/openssl/path hpux-parisc2-cc
+
+	Configuring Net::SSLeay:
+	
+		perl Makefile.PL /openssl/path CCFLAGS='-D_HPUX_SOURCE \
+		 -Aa -I/usr/local/include +e'
+
+	The magic bit seemed to be the `+e' flag. Since version 1.14
+	Makefile.PL tries to figure this out.
+
+	He was using: gcc v2.95.2, OpenSSL v0.9.6c, Net::SSLeay-1.13
 
 Windows:
 	You need to get MS VC++ 6.0 Enterprise Edition. Nobody has
@@ -99,6 +130,19 @@ but here's how it used to work...
   N.B. AFAIK the patent that made using RSAref necessary has expired, so
   this should be nonissue by now.
 
+Commercial Support
+------------------
+
+Commercial support for this module can be obtained from
+
+   Symlabs (netssleay@symlabs.com)
+   Tel: +351-214.222.630
+   Fax: +351-214.222.637
+
+Noncommercial support can be obtained via email from the author, but
+you are expected to do your home work well. Mails that do not full
+fill the criteria below may be silently ignored.
+
 Problems (read this before sending mail)
 ----------------------------------------
 
@@ -106,7 +150,7 @@ Please, do not send bug report before you have
 
   - compiled your OpenSSL yourself - don't copy binaries, please
   - compiled your perl yourself and with substantially same CFLAGS
-    and same c compiler (say `which cc' or `which gcc' as your OpenSSL.
+    and same C compiler (say `which cc' or `which gcc') as your OpenSSL.
     This is especially applicable to link errors and shared
     library loading problems. Please do not even dream of
     copying a perl binary or installing perl binary from a package.
@@ -122,10 +166,10 @@ Please, do not send bug report before you have
 If you send me a question or make a bug report, please remeber to mention
 
   - Your platform and OS version (i386 Linux, Sparc Solaris, etc) (uname -a)
-  - On Linux, please report glibc version as well
-  - Net::SSLeay version
+  - On Linux, please report glibc version as well (ls -l /lib/libc*)
+  - Net::SSLeay version (see tar ball)
   - OpenSSL version (`/usr/local/ssl/bin/openssl version')
-  - ANSI C compiler brand and version (gcc -v)
+  - ANSI C compiler brand and version (e.g. gcc -v)
 
 If build fails,
   - three compiler warnings are known to be emitted (due to lack of const
@@ -138,9 +182,9 @@ If build fails,
     Consider deleting all old bogus headers
   - if using newer than supported OpenSSL, please downgrade to supported
     version to see if it makes difference
-  - you must compile the module, perl, and openssl with the same compiler
+  - you must compile the module, perl, and openssl with the same C compiler
     and the same options. Use perl -V to check what options were used and
-    recompile openssl and my module accordingly
+    recompile openssl and Net::SSLeay accordingly
   - never report bugs related to binary installs. First compile _yourself_
     perl, openssl and my module, always using the same compiler and
     compiler flags. Many distros are known to "know better" and thus
@@ -155,12 +199,28 @@ If make test fails, please
   - send contents of sslecho.log
 
 If you have problems with a site, please
-  - what site, what server software
+  - what site, what server software (including version and platform)
   - does it reproduce with s_client, try with something like
 
    echo 'GET /' | /usr/local/ssl/bin/openssl s_client -connect www.bacus.pt:443
 
   - does it reproduce with popular web browsers
+  - play with Net::SSLeay::ssl_version (see top of SSLeay.pm)
+  - does the site run exotic configuration, e.g. insisting on specific
+    protocol version, limiting available ciphers, using nonstandard
+    ciphers, weird authentication arrangements, etc.)
+  - contact the owner of the server to see what the problem looks like
+    in his end. He should be able to tell you the exact versions used
+    and the error messages he is seeing in his log
+  - if you ask me to check a site out, you are granting me permission
+    to access that site and will pay all legal expenses to defend me
+    in court as well as any remedies that may be granted to the site
+    in case the site decides to sue me. You warrant that you are
+    authorized to give me permission to access the site.
+  - if you ask me to check a site, please send me a working URL and
+    include any authentication credentials if needed. If your site
+    is so confidential that you can not give me an URL, then do
+    not ask me to debug your problems.
 
 HP-UX is known to give some problems, please mail me or the mailing
 list so we can get these problems straightened. Hint: it has to do
@@ -172,12 +232,12 @@ perl and compiling the package with different cc or different options.
 Genereally this will never work. Please compile _yourself_ your perl,
 openssl, and the module, always with the same compiler and compiler flags.
 
-I have a report (schinder@pobox.com) of make test segfaulting on
+I have a report (schinder@@pobox._com) of make test segfaulting on
 Linux-PPC. This still needs to be investigated. No recent information
-has been receivced.
+has been received.
 
 It seems perl5.004 (at least some versions) has bad xsub compiler which
-can make builds sometimes fail. Try upgrading to perl-5.6.0 first.
+can make builds sometimes fail. Try upgrading to perl-5.6.1 first.
 
 "Random number generator not seeded!!!" This warning indicates that
     randomize() was not able to read /dev/random or /dev/urandom, possibly
@@ -199,7 +259,7 @@ My development environments are
   i586,   Linux-2.4.3,  gcc-2.92.2.1, glibc-2.2.2, perl-5.6.0,   openssl-0.9.6a
   i586,   Linux-2.4.3,  gcc-2.92.2.1, glibc-2.2.2, perl5.005_03, openssl-0.9.6
   i586,   Linux-2.4.3,  gcc-2.92.2.1, glibc-2.2.2, perl5.005_03, openssl-0.9.6a
-  Sun-U1, SunOS-5.6,    gcc-2.92.2,   libc2        perl-5.6.0
+  Sun-U1, SunOS-5.6,    gcc-2.92.2,   libc2        perl-5.6.1,   openssl-0.9.6c
 
 Unfortunately I do not have access to other systems so you are
 somewhat on your own. Everything compiles without a warning (except
@@ -207,7 +267,7 @@ those mentioned above) on my systems.
 
 Check if there are any post release building hints in
 
-	http://www.bacus.pt/Net_SSLeay/index.html
+	http://www.symlabs.com/Net_SSLeay/index.html
 
 Check that perl is finding your OpenSSL.
 
@@ -258,7 +318,8 @@ so I can fix it. Patches and gdb session dumps are also welcome.
 License and Copying
 -------------------
 
-Copyright (c) 1996-2001 Sampo Kellomaki <sampo@iki.fi>, All Rights Reserved.
+Copyright (c) 1996-2002 Sampo Kellomaki <sampo@symlabs.com>
+All Rights Reserved.
 
 Distribution and use of this module is under the same terms as the
 OpenSSL package itself (i.e. free, but mandatory attribution; NO
@@ -303,10 +364,10 @@ Say `perldoc Net::SSLeay' _NOW_!
 
 To download OpenSSL, try URL http://www.openssl.org/
 
-Of related interest may be `http://www.bacus.pt/Net_SSLeay/smime.html'
+Of related interest may be `http://www.symlabs.com/Net_SSLeay/smime.html'
 
 Newer versions of this module can be found from CPAN/authors/id/SAMPO/,
-the home page is http://www.bacus.pt/Net_SSLeay/index.html
+the home page is http://www.symlabs.com/Net_SSLeay/index.html
 
 Please send bug reports to the above address. General questions should be
 sent either to me or to the mailing list (subscribe by sending mail
