--- a/Net-SSLeay-Handle-0.50/Changes
+++ b/Net-SSLeay-Handle-0.50/Changes
@@ -1,4 +1,24 @@
 Revision history for Perl extension Net::SSLeay::Handle.
+$Id: Changes,v 1.2 2002/06/07 12:10:42 sampo Exp $
+
+0.62 June 5, 2002
+
+    - Fixed? \*S problems for earlier Perls.  
+    - Cleaned up proxy code.
+      Made _glob_ref() method to create unique names.  Has a slight
+      memory leak.  Could fix it but I think we have gone far enough
+      already.
+
+0.60 February 25, 2002
+
+   - Added READ() and WRITE() routines
+     Thanks to Rocco Caputo and Christopher Brannon
+
+0.52
+
+  - Sampo fixed some bugs (removed "our", etc)
+  - And improved make_socket so that it is aware
+    of  $Net::SSLeay::proxyhost
 
 0.50  Sat Jun 23 13:46    2001
        - Ported my old code into h2xs format
