--- a/Changes
+++ b/Changes
@@ -146,3 +146,7 @@ Revision history for Perl extension Net::SSLeay.
 	  Hermann Kelley <hkelley@@secmon._com>
 1.18  15.6.2002
 	- applied minor patch by Mark Veltzer <mark@@veltzer._org> to Makefile.PL
+1.19  10.8.2002-16.8.2002
+	- Added SSL_peek patch to ssl_read_until from 
+          Peter Behroozi <peter@@fhpwireless_.com> --Sampo
+	- Improved Windows instructions per Marcel Bucher <marcle@bucher._cc>
