--- a/Changes
+++ b/Changes
@@ -150,3 +150,6 @@ Revision history for Perl extension Net::SSLeay.
 	- Added SSL_peek patch to ssl_read_until from 
           Peter Behroozi <peter@@fhpwireless_.com> --Sampo
 	- Improved Windows instructions per Marcel Bucher <marcle@bucher._cc>
+1.20  16.8.2002
+	- Additional patch by Peter Behroozi <peter@@fhpwireless_.com> --Sampo
+	- Patch by Mike McCauley mikem@open.com_.au
