--- a/Changes
+++ b/Changes
@@ -165,3 +165,6 @@ Revision history for Perl extension Net::SSLeay.
 	- proxy auth fix from Bill.Muller@@ubsw_..com
       18.2.2003
 	- RAND patch from Toni Andjelkovic <toni@soth._at>
+1.23  13.6.2003
+	- some minor tweaks by many, mainly for RH build
+	- memory leak and cleanup patches from Marian Jancar <mjancar@suse._cz>
