--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 README - Net::SSLeay Perl module for using OpenSSL
 
-5.6.2002, Sampo Kellomaki <sampo@symlabs.com>
+13.6.2003, Sampo Kellomaki <sampo@symlabs.com>
 Version: 1.16
 $Id: README,v 1.6 2002/06/05 18:25:45 sampo Exp $
 
+1.23: tested against openssl-0.9.6j and openssl-0.9.7b
+...
 1.16: tested against openssl-0.9.6d, added more callback stuff
 1.14: added perr certificate return, HPUX aCC flags fix
 1.09: added many utlility functions of OpenSSL API, better old perl support
@@ -22,8 +24,8 @@ Prerequisites
 -------------
 
 perl-5.6.1
-                though anything starting from perl5.002 probably works.
-OpenSSL-0.9.6d
+                though anything starting from perl5.003 probably works.
+OpenSSL-0.9.6j or OpenSSL-0.9.7b
                 (try http://www.openssl.org/) - 
                 This release has been tested with 0.9.6d and
 		in historical light it seems likely that future versions
